css/style.css
html {
    margin: 0;
    padding: 0;
}

body {
    background: hsl(166, 100%, 22%);
    color: #fff;
    font-family: "overpassregular", sans-serif;
    font-size: 16px;
    overflow: hidden;
    margin: 0;
    padding: 0;
}

header {
    background: hsl(166, 100%, 17%);
    color: #fff;
    text-shadow: 0 0.1em 0.1em hsl(166, 100%, 12%);
    box-shadow: 0 0.15em 0.15em 0 hsl(166, 100%, 12%);
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    height: 3em;
    margin: 0;
    padding: 0;
    z-index: 10;
    display: flex;
    user-select: none;
}

header button {
    background: transparent;
    color: inherit;
    border: 0;
    -webkit-tap-highlight-color: hsl(166, 100%, 12%);
    cursor: pointer;
}

header button:hover {
    background: hsl(166, 100%, 12%);
}

.panel {
    background: hsl(166, 100%, 22%);
    color: #fff;
    display: block;
    position: absolute;
    transform: translate3d(-100%, 0, 0);
    transition: transform 1s ease;
    top: 3em;
    left: 0;
    bottom: 0;
    right: 0;
    height: auto;
    width: auto;
    margin: 0;
    padding: 0;
    z-index: 5;
    overflow: auto;
}

.panel.active-panel {
    transform: none;
    z-index: 7;
}

.closed::after {
    content: 'CLOSED';
    position: absolute;
    top:50%;
    left:50%;
    transform: translate3d(-50%, -50%, 0) rotateZ(-10deg);
    border: 0.15em solid;
    padding: .4em .7em;
    background: #dd7500;
    color: #000;
    box-shadow: 0 0.15em 0.15em 0 rgba(0, 0, 0, 0.2);
}

.sign {
    position: relative;
    border: 0.15em solid;
    border-radius: 1em;
    padding: 1em;
    background: hsl(166, 100%,22%);
    box-shadow: 0 0.15em 0.15em 0 rgba(0, 0, 0, 0.2);
}

.sign--link {
    -webkit-tap-highlight-color: hsl(166, 100%, 17%);
}

.sign--link:hover {
    background: hsl(166, 100%, 17%);
}

.sign-list {
    list-style-type: none;
}

.sign-list li {
    display: block;
    position: relative;
    color: #fff;
    margin: 0.5em;
    min-height: 2em;
    cursor: pointer;
}

.sign-list li h2 {
    font-size: 1.6em;
    letter-spacing: 0.08em;
    line-height: 1;
    margin: 0.1em 0;
    padding: 0;
    z-index: 6;
}

.sign-list li p {
    line-height: 1.2;
    margin: 0;
    padding: 0;
    z-index: 6;
}

.sign-list li h2+p {
    margin-top: 0.4em;
}

.center {
    text-align: center;
}

.hide--answer {
    padding-bottom: 3em;
}

.sign-list li p.answer {
    position: absolute;
    bottom: 0;
    left: 0;
    right: 0;
    padding: 0.5em;
    text-align: center;
}

.sign-list li p.answer.answer--hidden::after {
    content: 'View Answer';
    display: block;
    position: absolute;
    top: -0.15em;
    bottom: -0.15em;
    left: -0.15em;
    right: -0.15em;
    background: hsl(49, 97%, 54%);
    color: #000;
    padding: 0.5em;
    border: 0.15em solid;
    border-radius: 0 0 1em 1em;
    z-index: 15;
    text-align: center;
    text-transform: uppercase;
}

#levelList {
    background:
        linear-gradient(90deg,
            transparent 0%, transparent 15%,
            #999 15%, #999 20%,
            transparent 20%, transparent 80%,
            #999 80%, #999 85%,
            transparent 85%, transparent 100%),
        linear-gradient(0deg,
            rgb(45,255,221) 0%, rgb(51,165,255) 48%, rgb(0,155,255) 100%);
    user-select: none;
}

.icon-space {
    padding-left: 3.5em;
}

.icon-space img {
    position: absolute;
    top: 0.65em;
    left: 0.65em;
    height: 2.5em;
    margin-right: 0.5em;
}

#levelView {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(20em, 1fr));
}

.panel--blue {
    background: hsl(212, 100%, 26%);
}

.sign--blue {
    background: hsl(212, 100%, 26%);
}

.sign--link.sign--blue{
    -webkit-tap-highlight-color: hsl(212, 100%, 16%);
}

.sign--link.sign--blue:hover {
    background: hsl(212, 100%, 16%);
}

#aboutView ul {
    text-align: left;
}

#aboutView ul a {
    color: #fe9;
}

#aboutView ul a:hover {
    color: #fd7;
}

#aboutView ul li {
    margin: 0.2em;
}

h1 {
    text-align: center;
    letter-spacing: 0.1em;
    font-size: 1.5em;
    line-height: 2em;
    margin: 0;
    padding: 0;
    flex-grow: 1;
}

#logo {
    display: block;
    margin: 1em auto;
    width: 12em;
    z-index: 0;
}

noscript {
    display: block;
    width: 12em;
    background: #dd7500;
    color: #111;
    margin: 1em auto;
    text-align: center;
}

@media only screen and (min-width: 40em) {
    #levelList {
        width: 20em;
        right: auto;
    }

    #levelView, #aboutView {
        left: 20em;
    }

    .panel {
        transform: none;
    }

    #backBtn {
        visibility: hidden;
    }
}

